Read and log game version