@@ -186,6 +186,7 @@
                     </jLinkOptions>
                     <javaOptions>
                         <javaOption>--enable-native-access=com.formdev.flatlaf</javaOption>
+                        <javaOption>--enable-native-access=odradek.game.hfw</javaOption>
                         <javaOption>--enable-native-access=odradek.viewer.shader</javaOption>
                         <javaOption>--enable-native-access=org.lwjgl</javaOption>
                         <javaOption>--enable-native-access=org.lwjgl.opengl</javaOption>
